overflow fix

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body{
     padding: 0;
     display: flex;
     flex-direction: column;
+    width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 .envelope{
     visibility: hidden;
